Successfully downloading data

--- a/weather_analysis.ipynb
+++ b/weather_analysis.ipynb
@@ -11,7 +11,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 1,
       "metadata": {},
       "outputs": [
         {
@@ -20,7 +20,7 @@
               "True"
             ]
           },
-          "execution_count": 3,
+          "execution_count": 1,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -43,7 +43,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 2,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -68,15 +68,15 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 3,
       "metadata": {},
       "outputs": [],
       "source": [
         "def get_historical_data(mac_address, start_date, end_date, retries=3, delay=5):\n",
         "    \"\"\"Fetch historical data for a specific station between two dates.\"\"\"\n",
         "    # Convert dates to UTC for API request\n",
-        "    start_time_utc = PACIFIC_TZ.localize(start_date).astimezone(pytz.UTC)\n",
-        "    end_time_utc = PACIFIC_TZ.localize(end_date).astimezone(pytz.UTC)\n",
+        "    start_time_utc = start_date.astimezone(pytz.UTC)\n",
+        "    end_time_utc = end_date.astimezone(pytz.UTC)\n",
         "    \n",
         "    params = {\n",
         "        'apiKey': API_KEY,\n",
@@ -117,7 +117,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 4,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -150,8 +150,12 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
-      "metadata": {},
+      "execution_count": 5,
+      "metadata": {
+        "tags": [
+          "Data Donwload"
+        ]
+      },
       "outputs": [
         {
           "name": "stdout",
@@ -159,9 +163,9 @@
           "text": [
             "Fetching data from 2025-02-09 00:00:00-08:00 to 2025-02-19 00:00:00-08:00\n",
             "Fetching data for Ellwood Main...\n",
-            "Error processing Ellwood Main: Not naive datetime (tzinfo is already set)\n",
+            "Successfully fetched 437 records for Ellwood Main\n",
             "Fetching data for Ellwood Mesa...\n",
-            "Error processing Ellwood Mesa: Not naive datetime (tzinfo is already set)\n"
+            "Successfully fetched 433 records for Ellwood Mesa\n"
           ]
         }
       ],
@@ -202,73 +206,27 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 11,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "Index(['dateutc', 'windspeedmph', 'windgustmph', 'hourlyrainin', 'dailyrainin',\n",
+              "       'trustdevicetime', 'winddir', 'tempf', 'humidity', 'baromabsin',\n",
+              "       'baromrelin', 'solarradiation', 'sis', 'sds', 'solarradday', 'tz',\n",
+              "       'historical', 'feelsLike', 'dewPoint', 'passkey', 'time', 'loc', 'date',\n",
+              "       'batt1volts', 'lastRain', 'local_time'],\n",
+              "      dtype='object')"
+            ]
+          },
+          "execution_count": 11,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
-        "# Display sample of the data and basic statistics\n",
-        "for station_id, df in all_station_data.items():\n",
-        "    print(f\"\\nAnalysis for {STATIONS[station_id]['name']}:\")\n",
-        "    print(\"\\nSample data:\")\n",
-        "    display(df.head())\n",
-        "    \n",
-        "    print(f\"\\nTotal records: {len(df)}\")\n",
-        "    print(f\"Date range: {df['local_time'].min()} to {df['local_time'].max()}\")\n",
-        "    \n",
-        "    # Basic statistics for temperature and humidity\n",
-        "    if 'tempf' in df.columns and 'humidity' in df.columns:\n",
-        "        print(\"\\nTemperature Statistics (°F):\")\n",
-        "        print(df['tempf'].describe())\n",
-        "        \n",
-        "        print(\"\\nHumidity Statistics (%):\")\n",
-        "        print(df['humidity'].describe())"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "# Plot temperature trends\n",
-        "plt.figure(figsize=(15, 6))\n",
-        "\n",
-        "for station_id, df in all_station_data.items():\n",
-        "    if 'tempf' in df.columns:\n",
-        "        plt.plot(df['local_time'], df['tempf'], label=STATIONS[station_id]['name'])\n",
-        "\n",
-        "plt.title('Temperature Over Time')\n",
-        "plt.xlabel('Date')\n",
-        "plt.ylabel('Temperature (°F)')\n",
-        "plt.legend()\n",
-        "plt.grid(True)\n",
-        "plt.xticks(rotation=45)\n",
-        "plt.tight_layout()\n",
-        "plt.show()"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "# Calculate daily statistics\n",
-        "daily_stats = {}\n",
-        "\n",
-        "for station_id, df in all_station_data.items():\n",
-        "    if 'tempf' in df.columns:\n",
-        "        # Resample data to daily frequency and calculate statistics\n",
-        "        daily = df.set_index('local_time').resample('D').agg({\n",
-        "            'tempf': ['min', 'max', 'mean'],\n",
-        "            'humidity': ['min', 'max', 'mean']\n",
-        "        })\n",
-        "        \n",
-        "        daily.columns = ['temp_min', 'temp_max', 'temp_mean', 'humidity_min', 'humidity_max', 'humidity_mean']\n",
-        "        daily_stats[station_id] = daily\n",
-        "        \n",
-        "        print(f\"\\nDaily Statistics for {STATIONS[station_id]['name']}:\")\n",
-        "        display(daily.head())"
+        "df.columns"
       ]
     }
   ],
